--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -32,7 +32,7 @@ main {
     width: 100%;
     overflow: auto;
     position: relative;
-    margin-top: 60px;
-    display: flex;
+        display: flex;
     flex-direction: column;
+    padding: 0;
 }
