--- a/app/Components/Layout/FeedContent.razor.css
+++ b/app/Components/Layout/FeedContent.razor.css
@@ -1,9 +1,11 @@
 .feed-entries {
-    padding: 0.5rem;
+    padding: 0px 0.5rem;
     height: 100%;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+    
 }
 
 .feed-entries h3 {
@@ -21,7 +23,7 @@
 .rss-entry {
     padding-top: 3px;
     display: grid;
-    grid-template-columns: 36px 120px 1fr 180px;
+    grid-template-columns: 36px 120px 1fr 180px 14px;
     gap: 3px;
     width: 100%;   
     height: 24px;
@@ -331,3 +333,17 @@
 }
 
 
+
+.rss-entry-filtered {
+    font-size: 14pt;
+    color: red;
+    text-align: center;
+    height: 100%;
+    cursor: pointer;
+    font-weight: bold;
+    opacity: 0.7;
+}
+
+.rss-entry-filtered:hover {
+    opacity: 1;
+}
