Update navigation menu with icons, add search functionality, and create search results page. Adjusted styles for improved layout and user experience. Updated docker-compose.yml to correct port mapping.

--- a/app/App.razor
+++ b/app/App.razor
@@ -2,6 +2,7 @@
 @using Microsoft.JSInterop
 @using Microsoft.AspNetCore.Components.Web
 @using netRSS.Components.Layout
+@using netRSS.Components.Pages
 
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
