--- a/app/Components/Pages/Search.razor.css
+++ b/app/Components/Pages/Search.razor.css
@@ -28,7 +28,7 @@
 
 .search-button {
     padding: 10px 15px;
-    background-color: var(--dark-primary, #4dabf7);
+    background-color: #4aa50ea6;
     border: none;
     border-radius: 4px;
     color: white;
